drm/sched: Optimise drm_sched_entity_push_job (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1308,6 +1308,7 @@
 	patches.suse/drm-bridge-tc358767-Fix-link-properties-discovery.patch
 	patches.suse/accel-qaic-Add-AIC080-support.patch
 	patches.suse/drm-panic-Select-ZLIB_DEFLATE-for-DRM_PANIC_SCREEN_Q.patch
+	patches.suse/drm-sched-Optimise-drm_sched_entity_push_job.patch
 	patches.suse/drm-xe-add-interface-to-request-physical-alignment-f.patch
 	patches.suse/drm-amdgpu-Fix-JPEG-v4.0.3-register-write.patch
 	patches.suse/drm-amd-display-Fix-incorrect-DSC-recompute-trigger.patch
