drm/tidss: Set crtc modesetting parameters with adjusted mode (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12479,6 +12479,7 @@
 	patches.suse/drm-tidss-Use-the-crtc_-timings-when-programming-the.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.suse/drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MODE_VIDE.patch
+	patches.suse/drm-tidss-Set-crtc-modesetting-parameters-with-adjus.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
