dmaengine: mv_xor: match alloc_wc and free_wc (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12722,6 +12722,7 @@
 	patches.suse/phy-cadence-cdns-dphy-Fix-PLL-lock-and-O_CMN_READY-p.patch
 	patches.suse/phy-cadence-cdns-dphy-Update-calibration-wait-time-f.patch
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
+	patches.suse/dmaengine-mv_xor-match-alloc_wc-and-free_wc.patch
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
 	patches.suse/PCI-AER-Support-errors-introduced-by-PCIe-r6.0.patch
