drm/panthor: Serialize GPU cache flush operations (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12480,6 +12480,7 @@
 	patches.suse/drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.suse/drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MODE_VIDE.patch
 	patches.suse/drm-tidss-Set-crtc-modesetting-parameters-with-adjus.patch
+	patches.suse/drm-panthor-Serialize-GPU-cache-flush-operations.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
