--- a/series.conf
+++ b/series.conf
@@ -12478,6 +12478,7 @@
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-tidss-Use-the-crtc_-timings-when-programming-the.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
+	patches.suse/drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MODE_VIDE.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
