drm/panthor: check bo offset alignment in vm bind (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12517,6 +12517,7 @@
 	patches.suse/drm-amd-display-incorrect-conditions-for-failing-dto.patch
 	patches.suse/drm-xe-Fix-oops-in-xe_gem_fault-when-running-core_ho.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
+	patches.suse/drm-panthor-check-bo-offset-alignment-in-vm-bind.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.suse/drm-amd-pm-Fix-si_upload_smc_data-v3.patch
