--- a/series.conf
+++ b/series.conf
@@ -12508,6 +12508,7 @@
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 	patches.suse/drm-amdkfd-Handle-lack-of-READ-permissions-in-SVM-ma.patch
+	patches.suse/drm-amdgpu-Correct-the-counts-of-nr_banks-and-nr_err.patch
 	patches.suse/drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
