--- a/series.conf
+++ b/series.conf
@@ -12495,6 +12495,7 @@
 	patches.suse/drm-amdgpu-Skip-poison-aca-bank-from-UE-channel.patch
 	patches.suse/drm-amd-display-fix-dmub-access-race-condition.patch
 	patches.suse/drm-amd-display-more-liberal-vmin-vmax-update-for-fr.patch
+	patches.suse/drm-amd-display-update-dpp-disp-clock-from-smu-clock.patch
 	patches.suse/drm-amd-display-Fix-vupdate_offload_work-doc.patch
 	patches.suse/drm-amd-display-Add-NULL-check-for-stream-before-der.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
