--- a/series.conf
+++ b/series.conf
@@ -12518,6 +12518,7 @@
 	patches.suse/drm-xe-Fix-oops-in-xe_gem_fault-when-running-core_ho.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-panthor-check-bo-offset-alignment-in-vm-bind.patch
+	patches.suse/drm-panel-backlight-quirks-Make-EDID-match-optional.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.suse/drm-amd-pm-Fix-si_upload_smc_data-v3.patch
