--- a/series.conf
+++ b/series.conf
@@ -12555,6 +12555,7 @@
 	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 	patches.suse/drm-amd-display-dml2-Guard-dml21_map_dc_state_into_d.patch
 	patches.suse/drm-amd-display-Disable-VRR-on-DCE-6.patch
+	patches.suse/drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
