--- a/series.conf
+++ b/series.conf
@@ -12564,6 +12564,7 @@
 	patches.suse/accel-habanalabs-gaudi2-read-preboot-status-after-re.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amd-display-Add-AVI-infoframe-copy-in-copy_strea.patch
+	patches.suse/drm-amd-display-Init-dispclk-from-bootup-clock-for-D.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
