drm/amd/display: fix dml ms order of operations (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12548,6 +12548,7 @@
 	patches.suse/drm-xe-guc-Return-an-error-code-if-the-GuC-load-fail.patch
 	patches.suse/drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_wait_f.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
+	patches.suse/drm-amd-display-fix-dml-ms-order-of-operations.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
