drm/amd/display: Fix incorrect return of vblank enable on unconfigured crtc (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13031,6 +13031,7 @@
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va.patch
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va-501672e.patch
 	patches.suse/drm-amdgpu-fix-SPDX-header-on-cyan_skillfish_reg_ini.patch
+	patches.suse/drm-amd-display-Fix-incorrect-return-of-vblank-enabl.patch
 	patches.suse/drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.suse/drm-msm-dpu-Fix-pixel-extension-sub-sampling.patch
 	patches.suse/drm-msm-dpu-Require-linear-modifier-for-writeback-fr.patch
