--- a/series.conf
+++ b/series.conf
@@ -12552,6 +12552,7 @@
 	patches.suse/drm-amd-display-Set-up-pixel-encoding-for-YCBCR422.patch
 	patches.suse/drm-amd-display-Add-fallback-path-for-YCBCR422.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
+	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
