drm/xe/guc: Return an error code if the GuC load fails (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12545,6 +12545,7 @@
 	patches.suse/drm-msm-registers-Generate-_HI-LO-builders-for-reg64.patch
 	patches.suse/drm-xe-guc-Increase-GuC-crash-dump-buffer-size.patch
 	patches.suse/drm-xe-guc-Set-upper-limit-of-H2G-retries-over-CTB.patch
+	patches.suse/drm-xe-guc-Return-an-error-code-if-the-GuC-load-fail.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
