drm/amd/display: Fix for test crash due to power gating (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12565,6 +12565,7 @@
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amd-display-Add-AVI-infoframe-copy-in-copy_strea.patch
 	patches.suse/drm-amd-display-Init-dispclk-from-bootup-clock-for-D.patch
+	patches.suse/drm-amd-display-Fix-for-test-crash-due-to-power-gati.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
