drm/amd/display/dml2: Guard dml21_map_dc_state_into_dml_display_cfg with DC_FP_START (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12553,6 +12553,7 @@
 	patches.suse/drm-amd-display-Add-fallback-path-for-YCBCR422.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
+	patches.suse/drm-amd-display-dml2-Guard-dml21_map_dc_state_into_d.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
