--- a/series.conf
+++ b/series.conf
@@ -13073,6 +13073,7 @@
 	patches.suse/drm-sched-Fix-deadlock-in-drm_sched_entity_kill_jobs.patch
 	patches.suse/drm-i915-Avoid-lock-inversion-when-pinning-to-GGTT-o.patch
 	patches.suse/drm-i915-Fix-conversion-between-clock-ticks-and-nano.patch
+	patches.suse/drm-amd-display-Fix-black-screen-with-HDMI-outputs.patch
 	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
