--- a/series.conf
+++ b/series.conf
@@ -12554,6 +12554,7 @@
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 	patches.suse/drm-amd-display-dml2-Guard-dml21_map_dc_state_into_d.patch
+	patches.suse/drm-amd-display-Disable-VRR-on-DCE-6.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
