firewire: ohci: move self_id_complete tracepoint after validating register (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12398,6 +12398,7 @@
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
+	patches.suse/firewire-ohci-move-self_id_complete-tracepoint-after.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
