--- a/series.conf
+++ b/series.conf
@@ -12775,6 +12775,7 @@
 	patches.suse/iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_CLKDIV_.patch
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
+	patches.suse/extcon-adc-jack-Fix-wakeup-source-leaks-on-device-un.patch
 	patches.suse/iio-consumers-Fix-handling-of-negative-channel-scale.patch
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
