--- a/series.conf
+++ b/series.conf
@@ -12445,6 +12445,7 @@
 	patches.suse/arm64-dts-apple-Add-ethernet0-alias-for-J375-template.patch
 	patches.suse/firmware-qcom-scm-preserve-assign_mem-error-return-v.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
+	patches.suse/firmware-qcom-tzmem-disable-sc7180-platform.patch
 	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8183-prob.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8192-prob.patch
