--- a/series.conf
+++ b/series.conf
@@ -12374,6 +12374,7 @@
 	patches.suse/hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.suse/hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
 	patches.suse/hwmon-sbtsi_temp-AMD-CPU-extended-temperature-range-.patch
+	patches.suse/hwmon-sy7636a-add-alias.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
