HID: asus: add Z13 folio to generic group for multitouch to work (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12743,6 +12743,7 @@
 	patches.suse/KEYS-trusted_tpm1-Compare-HMAC-values-in-constant-ti.patch
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
+	patches.suse/HID-asus-add-Z13-folio-to-generic-group-for-multitou.patch
 	patches.suse/mtd-rawnand-fsmc-Default-to-autodetect-buswidth.patch
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
