--- a/series.conf
+++ b/series.conf
@@ -13023,6 +13023,7 @@
 	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
 	patches.suse/net-sctp-fix-KMSAN-uninit-value-in-sctp_inq_pop.patch
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
+	patches.suse/fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP_NR_DMA.patch
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-SPCR-Check-for-table-version-when-using-precise.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
