--- a/series.conf
+++ b/series.conf
@@ -12373,6 +12373,7 @@
 	patches.suse/hwmon-k10temp-Add-thermal-support-for-AMD-Family-1Ah.patch
 	patches.suse/hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.suse/hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
+	patches.suse/hwmon-sbtsi_temp-AMD-CPU-extended-temperature-range-.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
