--- a/series.conf
+++ b/series.conf
@@ -12744,6 +12744,7 @@
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 	patches.suse/HID-asus-add-Z13-folio-to-generic-group-for-multitou.patch
+	patches.suse/HID-pidff-Use-direction-fix-only-for-conditional-eff.patch
 	patches.suse/mtd-rawnand-fsmc-Default-to-autodetect-buswidth.patch
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
