fbcon: Set fb_display[i]->mode to NULL when the mode is released (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13025,6 +13025,7 @@
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
 	patches.suse/fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP_NR_DMA.patch
 	patches.suse/fbdev-bitblit-bound-check-glyph-index-in-bit_putcs.patch
+	patches.suse/fbcon-Set-fb_display-i-mode-to-NULL-when-the-mode-is.patch
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-SPCR-Check-for-table-version-when-using-precise.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
