fbdev: bitblit: bound-check glyph index in bit_putcs* (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13024,6 +13024,7 @@
 	patches.suse/net-sctp-fix-KMSAN-uninit-value-in-sctp_inq_pop.patch
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
 	patches.suse/fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP_NR_DMA.patch
+	patches.suse/fbdev-bitblit-bound-check-glyph-index-in-bit_putcs.patch
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-SPCR-Check-for-table-version-when-using-precise.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
