hwmon: (dell-smm) Remove Dell Precision 490 custom config data (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12375,6 +12375,7 @@
 	patches.suse/hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
 	patches.suse/hwmon-sbtsi_temp-AMD-CPU-extended-temperature-range-.patch
 	patches.suse/hwmon-sy7636a-add-alias.patch
+	patches.suse/hwmon-dell-smm-Remove-Dell-Precision-490-custom-conf.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
