extcon: adc-jack: Cleanup wakeup source only if it was enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12776,6 +12776,7 @@
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
 	patches.suse/extcon-adc-jack-Fix-wakeup-source-leaks-on-device-un.patch
+	patches.suse/extcon-adc-jack-Cleanup-wakeup-source-only-if-it-was.patch
 	patches.suse/iio-consumers-Fix-handling-of-negative-channel-scale.patch
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
