hwmon: (k10temp) Add device ID for Strix Halo (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12371,6 +12371,7 @@
 	patches.suse/bpf-arm64-Call-bpf_jit_binary_pack_finalize-in-bpf_jit_fre.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-k10temp-Add-thermal-support-for-AMD-Family-1Ah.patch
+	patches.suse/hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
