--- a/series.conf
+++ b/series.conf
@@ -12528,6 +12528,7 @@
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-panthor-check-bo-offset-alignment-in-vm-bind.patch
 	patches.suse/drm-panel-backlight-quirks-Make-EDID-match-optional.patch
+	patches.suse/Fix-access-to-video_is_primary_device-when-compiled-.patch
 	patches.suse/drm-amdgpu-Allow-kfd-CRIU-with-no-buffer-objects.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
