media: adv7180: Do not write format to device in set_fmt (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12604,6 +12604,7 @@
 	patches.suse/media-pci-mgb4-Fix-timings-comparison-in-VIDIOC_S_DV.patch
 	patches.suse/media-nxp-imx8-isi-Drop-unused-argument-to-mxc_isi_c.patch
 	patches.suse/media-adv7180-Add-missing-lock-in-suspend-callback.patch
+	patches.suse/media-adv7180-Do-not-write-format-to-device-in-set_f.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.suse/media-vivid-fix-disappearing-Vendor-Command-With-ID-.patch
