--- a/series.conf
+++ b/series.conf
@@ -12608,6 +12608,7 @@
 	patches.suse/media-adv7180-Only-validate-format-in-querystd.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
+	patches.suse/media-i2c-og01a1b-Specify-monochrome-media-bus-forma.patch
 	patches.suse/media-vivid-fix-disappearing-Vendor-Command-With-ID-.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
