iio: adc: imx93_adc: load calibrated values even calibration failed (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12793,6 +12793,7 @@
 	patches.suse/extcon-adc-jack-Fix-wakeup-source-leaks-on-device-un.patch
 	patches.suse/extcon-adc-jack-Cleanup-wakeup-source-only-if-it-was.patch
 	patches.suse/iio-adc-spear_adc-mask-SPEAR_ADC_STATUS-channel-and-.patch
+	patches.suse/iio-adc-imx93_adc-load-calibrated-values-even-calibr.patch
 	patches.suse/iio-consumers-Fix-handling-of-negative-channel-scale.patch
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
