--- a/series.conf
+++ b/series.conf
@@ -13050,6 +13050,7 @@
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
 	patches.suse/ACPI-fan-Use-ACPI-handle-when-retrieving-_FST.patch
 	patches.suse/ACPI-fan-Use-platform-device-for-devres-related-acti.patch
+	patches.suse/kunit-test_dev_action-Correctly-cast-priv-pointer-to.patch
 	patches.suse/crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.suse/ALSA-usb-audio-don-t-log-messages-meant-for-1810c-wh.patch
