i3c: mipi-i3c-hci-pci: Add support for Intel Wildcat Lake-U I3C (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12411,6 +12411,7 @@
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
 	patches.suse/i2c-designware-Fix-clock-issue-when-PM-is-disabled.patch
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
+	patches.suse/i3c-mipi-i3c-hci-pci-Add-support-for-Intel-Wildcat-L.patch
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
