media: i2c: Kconfig: Ensure a dependency on HAVE_CLK for VIDEO_CAMERA_SENSOR (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12585,6 +12585,7 @@
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-amphion-Delete-v4l2_fh-synchronously-in-.relea.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
+	patches.suse/media-i2c-Kconfig-Ensure-a-dependency-on-HAVE_CLK-fo.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
 	patches.suse/media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 	patches.suse/media-v4l2-subdev-Fix-alloc-failure-check-in-v4l2_su.patch
