media: fix uninitialized symbol warnings (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12599,6 +12599,7 @@
 	patches.suse/media-pci-ivtv-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-pci-mg4b-fix-uninitialized-iio-scan-data.patch
 	patches.suse/media-cec-extron-da-hd-4k-plus-drop-external-module-.patch
+	patches.suse/media-fix-uninitialized-symbol-warnings.patch
 	patches.suse/media-s5p-mfc-remove-an-unused-uninitialized-variabl.patch
 	patches.suse/media-nxp-imx8-isi-Drop-unused-argument-to-mxc_isi_c.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
