media: pci: mgb4: Fix timings comparison in VIDIOC_S_DV_TIMINGS (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12601,6 +12601,7 @@
 	patches.suse/media-cec-extron-da-hd-4k-plus-drop-external-module-.patch
 	patches.suse/media-fix-uninitialized-symbol-warnings.patch
 	patches.suse/media-s5p-mfc-remove-an-unused-uninitialized-variabl.patch
+	patches.suse/media-pci-mgb4-Fix-timings-comparison-in-VIDIOC_S_DV.patch
 	patches.suse/media-nxp-imx8-isi-Drop-unused-argument-to-mxc_isi_c.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
