--- a/series.conf
+++ b/series.conf
@@ -12376,6 +12376,7 @@
 	patches.suse/hwmon-sbtsi_temp-AMD-CPU-extended-temperature-range-.patch
 	patches.suse/hwmon-sy7636a-add-alias.patch
 	patches.suse/hwmon-dell-smm-Remove-Dell-Precision-490-custom-conf.patch
+	patches.suse/hwmon-asus-ec-sensors-increase-timeout-for-locking-A.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
