--- a/series.conf
+++ b/series.conf
@@ -12583,6 +12583,7 @@
 	patches.suse/drm-amd-display-change-dc-stream-color-settings-only.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
+	patches.suse/media-amphion-Delete-v4l2_fh-synchronously-in-.relea.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
 	patches.suse/media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
