--- a/series.conf
+++ b/series.conf
@@ -12587,6 +12587,7 @@
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-i2c-Kconfig-Ensure-a-dependency-on-HAVE_CLK-fo.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
+	patches.suse/media-imon-make-send_packet-more-robust.patch
 	patches.suse/media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 	patches.suse/media-v4l2-subdev-Fix-alloc-failure-check-in-v4l2_su.patch
 	patches.suse/media-ti-j721e-csi2rx-Use-devm_of_platform_populate.patch
