--- a/series.conf
+++ b/series.conf
@@ -12400,6 +12400,7 @@
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
 	patches.suse/mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
 	patches.suse/mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
+	patches.suse/mfd-kempld-Switch-back-to-earlier-init-behavior.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
