--- a/series.conf
+++ b/series.conf
@@ -12828,6 +12828,7 @@
 	patches.suse/PCI-AER-Support-errors-introduced-by-PCIe-r6.0.patch
 	patches.suse/PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
 	patches.suse/PCI-P2PDMA-Fix-incorrect-pointer-usage-in-devm_kfree.patch
+	patches.suse/PCI-PM-Skip-resuming-to-D0-if-device-is-disconnected.patch
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
 	patches.suse/PCI-pwrctrl-Fix-device-leak-at-registration.patch
 	patches.suse/PCI-Ensure-relaxed-tail-alignment-does-not-increase-m.patch
