--- a/series.conf
+++ b/series.conf
@@ -12839,6 +12839,7 @@
 	patches.suse/PCI-tegra194-Reset-BARs-when-running-in-PCIe-endpoin.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.suse/PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie_edma_i.patch
+	patches.suse/PCI-imx6-Enable-the-Vaux-supply-if-available.patch
 	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
 	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
