net: phy: marvell: Fix 88e1510 downshift counter errata (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12630,6 +12630,7 @@
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
 	patches.suse/inet-ping-check-sock_net-in-ping_get_port-and-ping_l.patch
+	patches.suse/net-phy-marvell-Fix-88e1510-downshift-counter-errata.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/msft-hv-3344-net-mana-Reduce-waiting-time-if-HWC-not-responding.patch
