net: wwan: t7xx: add support for HP DRMR-H01 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12913,6 +12913,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
 	patches.suse/mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-cmdq_mb.patch
 	patches.suse/net-sctp-fix-a-null-dereference-in-sctp_disposition-.patch
+	patches.suse/net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
 	patches.suse/tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_conn_request.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 	patches.suse/net-9p-fix-double-req-put-in-p9_fd_cancelled.patch
