net: phy: clear link parameters on admin link down (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12639,6 +12639,7 @@
 	patches.suse/dpll-zl3073x-Add-firmware-loading-functionality.patch
 	patches.suse/dpll-zl3073x-Refactor-DPLL-initialization.patch
 	patches.suse/dpll-zl3073x-Implement-devlink-flash-callback.patch
+	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A9000.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
