--- a/series.conf
+++ b/series.conf
@@ -12402,6 +12402,7 @@
 	patches.suse/mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
 	patches.suse/mfd-kempld-Switch-back-to-earlier-init-behavior.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
+	patches.suse/mfd-da9063-Split-chip-variant-reading-in-two-bus-tra.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
