mfd: intel-lpss: Add Intel Wildcat Lake LPSS PCI IDs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12406,6 +12406,7 @@
 	patches.suse/mfd-madera-Work-around-false-positive-Wininitialized.patch
 	patches.suse/mfd-core-Increment-of_node-s-refcount-before-linking.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.suse/mfd-intel-lpss-Add-Intel-Wildcat-Lake-LPSS-PCI-IDs.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
 	patches.suse/firewire-ohci-move-self_id_complete-tracepoint-after.patch
