--- a/series.conf
+++ b/series.conf
@@ -12628,6 +12628,7 @@
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
+	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
 	patches.suse/inet-ping-check-sock_net-in-ping_get_port-and-ping_l.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
