--- a/series.conf
+++ b/series.conf
@@ -12396,6 +12396,7 @@
 	patches.suse/mmc-mmc_spi-multiple-block-read-remove-read-crc-ack.patch
 	patches.suse/mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 	patches.suse/memstick-Add-timeout-to-prevent-indefinite-waiting.patch
+	patches.suse/mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-for-SD-ca.patch
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
