mfd: stmpe-i2c: Add missing MODULE_LICENSE (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12399,6 +12399,7 @@
 	patches.suse/mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-for-SD-ca.patch
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
 	patches.suse/mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
+	patches.suse/mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
