mfd: core: Increment of_node's refcount before linking it to the platform device (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12404,6 +12404,7 @@
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-da9063-Split-chip-variant-reading-in-two-bus-tra.patch
 	patches.suse/mfd-madera-Work-around-false-positive-Wininitialized.patch
+	patches.suse/mfd-core-Increment-of_node-s-refcount-before-linking.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
