--- a/series.conf
+++ b/series.conf
@@ -12808,6 +12808,7 @@
 	patches.suse/KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsing.patch
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 	patches.suse/KEYS-trusted_tpm1-Compare-HMAC-values-in-constant-ti.patch
+	patches.suse/platform-x86-intel-uncore-freq-Fix-warning-in-partit.patch
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 	patches.suse/HID-asus-add-Z13-folio-to-generic-group-for-multitou.patch
