--- a/series.conf
+++ b/series.conf
@@ -13227,6 +13227,7 @@
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
 	patches.suse/wifi-mac80211-reject-address-change-while-connecting.patch
 	patches.suse/wifi-ath11k-zero-init-info-status-in-wmi_process_mgm.patch
+	patches.suse/wifi-mac80211-skip-rate-verification-for-not-capture.patch
 	patches.suse/ACPI-CPPC-Detect-preferred-core-availability-on-onli.patch
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
