--- a/series.conf
+++ b/series.conf
@@ -13114,6 +13114,7 @@
 	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
 	patches.suse/wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
+	patches.suse/wifi-mac80211-fix-key-tailroom-accounting-leak.patch
 	patches.suse/usbnet-Prevents-free-active-kevent.patch
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
 	patches.suse/Bluetooth-ISO-Fix-BIS-connection-dst_type-handling.patch
