wifi: mac80211: reject address change while connecting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13225,6 +13225,7 @@
 	patches.suse/Bluetooth-L2CAP-export-l2cap_chan_hold-for-modules.patch
 	patches.suse/Bluetooth-6lowpan-Don-t-hold-spin-lock-over-sleeping.patch
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
+	patches.suse/wifi-mac80211-reject-address-change-while-connecting.patch
 	patches.suse/ACPI-CPPC-Detect-preferred-core-availability-on-onli.patch
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
