--- a/series.conf
+++ b/series.conf
@@ -12475,6 +12475,7 @@
 	patches.suse/arm64-dts-apple-Add-ethernet0-alias-for-J375-template.patch
 	patches.suse/soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 	patches.suse/firmware-qcom-scm-preserve-assign_mem-error-return-v.patch
+	patches.suse/soc-qcom-smem-Fix-endian-unaware-access-of-num_entri.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-qcom-tzmem-disable-sc7180-platform.patch
 	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
