usb: cdns3: gadget: Use-after-free during failed initialization and exit of cdnsp gadget (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12828,6 +12828,7 @@
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-gadget-f_hid-Fix-zero-length-packet-transfer.patch
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
+	patches.suse/usb-cdns3-gadget-Use-after-free-during-failed-initia.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
