--- a/series.conf
+++ b/series.conf
@@ -12681,6 +12681,7 @@
 	patches.suse/wifi-mac80211-Track-NAN-interface-start-stop.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtw88-sdio-use-indirect-IO-for-device-registers.patch
+	patches.suse/wifi-rtw89-print-just-once-for-unknown-C2H-events.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
