--- a/series.conf
+++ b/series.conf
@@ -12832,6 +12832,7 @@
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
 	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
+	patches.suse/usb-gadget-f_fs-Fix-epfile-null-pointer-access-after.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
