--- a/series.conf
+++ b/series.conf
@@ -12443,6 +12443,7 @@
 	patches.suse/PM-hibernate-Add-pm_hibernation_mode_is_suspend.patch
 	patches.suse/drm-amd-Fix-hybrid-sleep.patch
 	patches.suse/PM-hibernate-Fix-pm_hibernation_mode_is_suspend-buil.patch
+	patches.suse/tools-power-x86_energy_perf_policy-Fix-incorrect-fop.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-dispatcher-Use-acpi_ds_clear_operands-in-acpi.patch
