--- a/series.conf
+++ b/series.conf
@@ -12671,6 +12671,7 @@
 	patches.suse/wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A9000.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
 	patches.suse/wifi-mt76-mt7921-Add-160MHz-beamformee-capability-fo.patch
+	patches.suse/wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.suse/wifi-mt76-mt7996-Fix-RX-packets-configuration-for-pr.patch
 	patches.suse/wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-to-LE.patch
 	patches.suse/wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
