--- a/series.conf
+++ b/series.conf
@@ -12686,6 +12686,7 @@
 	patches.suse/wifi-rtw89-fix-BSSID-comparison-for-non-transmitted-.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
+	patches.suse/wifi-rtw89-obtain-RX-path-from-ppdu-status-IE00.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
