spi: rpc-if: Add resume support for RZ/G3E (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12396,6 +12396,7 @@
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
 	patches.suse/spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
 	patches.suse/spi-fix-return-code-when-spi-device-has-too-many-chi.patch
+	patches.suse/spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
 	patches.suse/mmc-mmc_spi-multiple-block-read-remove-read-crc-ack.patch
 	patches.suse/mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
