--- a/series.conf
+++ b/series.conf
@@ -12420,6 +12420,7 @@
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-sbs-charger-Support-multiple-devices.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
+	patches.suse/power-supply-qcom_battmgr-handle-charging-state-chan.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.suse/pinctrl-renesas-rzg2l-Fix-invalid-unsigned-return-in.patch
