--- a/series.conf
+++ b/series.conf
@@ -12677,6 +12677,7 @@
 	patches.suse/wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
 	patches.suse/wifi-mt76-mt76_eeprom_override-to-int.patch
 	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A7500.patch
+	patches.suse/wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mcu_sta_k.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
