--- a/series.conf
+++ b/series.conf
@@ -12666,6 +12666,7 @@
 	patches.suse/dpll-zl3073x-Refactor-DPLL-initialization.patch
 	patches.suse/dpll-zl3073x-Implement-devlink-flash-callback.patch
 	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
+	patches.suse/r8169-set-EEE-speed-down-ratio-to-1.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A9000.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
