usb: gadget: f_ncm: Fix MAC assignment NCM ethernet (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12823,6 +12823,7 @@
 	patches.suse/tty-vt-Add-missing-return-value-for-VT_RESIZE-in-vt_.patch
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
+	patches.suse/usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ethernet.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
