usb: mon: Increase BUFF_MAX to 64 MiB to support multi-MB URBs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12831,6 +12831,7 @@
 	patches.suse/usb-cdns3-gadget-Use-after-free-during-failed-initia.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
+	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
