wifi: rtw89: renew a completion for each H2C command waiting C2H event (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12687,6 +12687,7 @@
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtw89-obtain-RX-path-from-ppdu-status-IE00.patch
+	patches.suse/wifi-rtw89-renew-a-completion-for-each-H2C-command-w.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
