pinctrl: single: fix bias pull up/down handling in pin_config_set (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12421,6 +12421,7 @@
 	patches.suse/power-supply-sbs-charger-Support-multiple-devices.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/power-supply-qcom_battmgr-handle-charging-state-chan.patch
+	patches.suse/pinctrl-single-fix-bias-pull-up-down-handling-in-pin.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.suse/pinctrl-renesas-rzg2l-Fix-invalid-unsigned-return-in.patch
