--- a/series.conf
+++ b/series.conf
@@ -13097,6 +13097,7 @@
 	patches.suse/usb-xhci-pci-Fix-USB2-only-root-hub-registration.patch
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
+	patches.suse/usb-raw-gadget-do-not-limit-transfer-length.patch
 	patches.suse/serial-8250_exar-add-support-for-Advantech-2-port-car.patch
 	patches.suse/serial-sc16is7xx-remove-useless-enable-of-enhanced-f.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
