--- a/series.conf
+++ b/series.conf
@@ -12473,6 +12473,7 @@
 	patches.suse/arm64-dts-imx95-Correct-the-lpuart7-and-lpuart8-srcid.patch
 	patches.suse/arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-iommu-map.patch
 	patches.suse/arm64-dts-apple-Add-ethernet0-alias-for-J375-template.patch
+	patches.suse/soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 	patches.suse/firmware-qcom-scm-preserve-assign_mem-error-return-v.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-qcom-tzmem-disable-sc7180-platform.patch
