soc: ti: pruss: don't use %pK through printk (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12484,6 +12484,7 @@
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8192-prob.patch
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/firmware-firmware-meson-sm-fix-compile-test-default.patch
+	patches.suse/soc-ti-pruss-don-t-use-pK-through-printk.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/nbd-restrict-sockets-to-TCP-and-UDP.patch
