wifi: rtw89: fix BSSID comparison for non-transmitted BSSID (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12683,6 +12683,7 @@
 	patches.suse/wifi-rtw88-sdio-use-indirect-IO-for-device-registers.patch
 	patches.suse/wifi-rtw89-print-just-once-for-unknown-C2H-events.patch
 	patches.suse/wifi-rtw89-wow-remove-notify-during-WoWLAN-net-detec.patch
+	patches.suse/wifi-rtw89-fix-BSSID-comparison-for-non-transmitted-.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
