--- a/series.conf
+++ b/series.conf
@@ -13014,6 +13014,7 @@
 	patches.suse/rtc-pcf2127-clear-minute-second-interrupt.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
+	patches.suse/rtc-pcf2127-fix-watchdog-interrupt-mask-on-pcf2131.patch
 	patches.suse/rtc-interface-Fix-long-standing-race-when-setting-al.patch
 	patches.suse/rtc-interface-Ensure-alarm-irq-is-enabled-when-UIE-i.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
