tty: serial: Modify the use of dev_err_probe() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12818,6 +12818,7 @@
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
+	patches.suse/tty-serial-Modify-the-use-of-dev_err_probe.patch
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
