--- a/series.conf
+++ b/series.conf
@@ -13112,6 +13112,7 @@
 	patches.suse/wifi-ath10k-Fix-memory-leak-on-unsupported-WMI-comma.patch
 	patches.suse/wifi-ath11k-Add-missing-platform-IDs-for-quirk-table.patch
 	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
+	patches.suse/wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
 	patches.suse/usbnet-Prevents-free-active-kevent.patch
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
