--- a/series.conf
+++ b/series.conf
@@ -12414,6 +12414,7 @@
 	patches.suse/mfd-intel-lpss-Add-Intel-Wildcat-Lake-LPSS-PCI-IDs.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
+	patches.suse/video-backlight-lp855x_bl-Set-correct-EPROM-start-fo.patch
 	patches.suse/firewire-ohci-move-self_id_complete-tracepoint-after.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
