--- a/series.conf
+++ b/series.conf
@@ -12834,6 +12834,7 @@
 	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
 	patches.suse/usb-gadget-f_fs-Fix-epfile-null-pointer-access-after.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
+	patches.suse/usb-xhci-pci-add-support-for-hosts-with-zero-USB3-po.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
