wifi: mac80211: Fix HE capabilities element check (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12656,6 +12656,7 @@
 	patches.suse/net-phy-marvell-Fix-88e1510-downshift-counter-errata.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-mac80211-Fix-6-GHz-Band-capabilities-element-ad.patch
+	patches.suse/wifi-mac80211-Fix-HE-capabilities-element-check.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/msft-hv-3344-net-mana-Reduce-waiting-time-if-HWC-not-responding.patch
 	patches.suse/dpll-zl3073x-Add-functions-to-access-hardware-regist.patch
