thermal: intel: selftests: workload_hint: Mask unsupported types (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12466,6 +12466,7 @@
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 	patches.suse/ACPI-PRM-Skip-handlers-with-NULL-handler_address-or-.patch
 	patches.suse/thermal-gov_step_wise-Allow-cooling-level-to-be-redu.patch
+	patches.suse/thermal-intel-selftests-workload_hint-Mask-unsupport.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-GPIO-for-panel-regulator.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-USB-port-assignment.patch
