phy: cadence: cdns-dphy: Enable lower resolutions in dphy (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12871,6 +12871,7 @@
 	patches.suse/phy-cadence-cdns-dphy-Fix-PLL-lock-and-O_CMN_READY-p.patch
 	patches.suse/phy-cadence-cdns-dphy-Update-calibration-wait-time-f.patch
 	patches.suse/phy-renesas-r8a779f0-ether-serdes-add-new-step-added.patch
+	patches.suse/phy-cadence-cdns-dphy-Enable-lower-resolutions-in-dp.patch
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 	patches.suse/dmaengine-mv_xor-match-alloc_wc-and-free_wc.patch
 	patches.suse/dmaengine-dw-edma-Set-status-for-callback_result.patch
