tools: lib: thermal: don't preserve owner in install (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12954,6 +12954,7 @@
 	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
 	patches.suse/ACPI-property-Return-present-device-nodes-only-on-fw.patch
 	patches.suse/tools-lib-thermal-use-pkg-config-to-locate-libnl3.patch
+	patches.suse/tools-lib-thermal-don-t-preserve-owner-in-install.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
