wifi: ath11k: add support for MU EDCA (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7333,6 +7333,7 @@
 	patches.suse/wifi-ath9k-do-not-submit-zero-bytes-to-the-entropy-p.patch
 	patches.suse/wifi-ath12k-fix-ath12k_hal_tx_cmd_ext_desc_setup-inf.patch
 	patches.suse/wifi-ath12k-Avoid-napi_sync-before-napi_enable.patch
+	patches.suse/wifi-ath11k-add-support-for-MU-EDCA.patch
 	patches.suse/wifi-ath11k-fix-wrong-overriding-for-VHT-Beamformee-.patch
 	patches.suse/wifi-ath11k-update-channel-list-in-reg-notifier-inst.patch
 	patches.suse/wifi-ath11k-update-channel-list-in-worker-when-wait-.patch
