wifi: mac80211: don't mark keys for inactive links as uploaded (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11304,6 +11304,7 @@
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-mac80211-don-t-unreserve-never-reserved-chanctx.patch
 	patches.suse/wifi-cfg80211-Fix-interface-type-validation.patch
+	patches.suse/wifi-mac80211-don-t-mark-keys-for-inactive-links-as-.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-scan-request-validation.patch
 	patches.suse/wifi-iwlwifi-mvm-set-gtk-id-also-in-older-FWs.patch
 	patches.suse/dpll-zl3073x-Add-support-to-get-set-esync-on-pins.patch
