tty/vt: Add missing return value for VT_RESIZE in vt_ioctl() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12820,6 +12820,7 @@
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
 	patches.suse/tty-serial-Modify-the-use-of-dev_err_probe.patch
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
+	patches.suse/tty-vt-Add-missing-return-value-for-VT_RESIZE-in-vt_.patch
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
