power: supply: qcom_battmgr: add OOI chemistry (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12416,6 +12416,7 @@
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
 	patches.suse/video-backlight-lp855x_bl-Set-correct-EPROM-start-fo.patch
 	patches.suse/firewire-ohci-move-self_id_complete-tracepoint-after.patch
+	patches.suse/power-supply-qcom_battmgr-add-OOI-chemistry.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
