--- a/series.conf
+++ b/series.conf
@@ -12910,6 +12910,7 @@
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 	patches.suse/PCI-xilinx-nwl-Fix-ECAM-programming.patch
 	patches.suse/PCI-ACPI-Fix-pci_acpi_preserve_config-memory-leak.patch
+	patches.suse/watchdog-s3c2410_wdt-Fix-max_timeout-being-calculate.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/KVM-x86-mmu-Return-EAGAIN-if-userspace-deletes-moves.patch
