--- a/series.conf
+++ b/series.conf
@@ -13233,6 +13233,7 @@
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
 	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
+	patches.suse/PM-hibernate-Emit-an-error-when-image-writing-fails.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
