soc/tegra: fuse: Add Tegra114 nvmem cells and fuse lookups (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12478,6 +12478,7 @@
 	patches.suse/soc-qcom-smem-Fix-endian-unaware-access-of-num_entri.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-qcom-tzmem-disable-sc7180-platform.patch
+	patches.suse/soc-tegra-fuse-Add-Tegra114-nvmem-cells-and-fuse-loo.patch
 	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8183-prob.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8192-prob.patch
