--- a/series.conf
+++ b/series.conf
@@ -12836,6 +12836,7 @@
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 	patches.suse/usb-xhci-pci-add-support-for-hosts-with-zero-USB3-po.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
+	patches.suse/thunderbolt-Use-is_pciehp-instead-of-is_hotplug_brid.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 	patches.suse/char-misc-Make-misc_register-reentry-for-miscdevice-.patch
