tools/cpupower: Fix incorrect size in cpuidle_state_disable() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12447,6 +12447,7 @@
 	patches.suse/tools-power-x86_energy_perf_policy-Enhance-HWP-enabl.patch
 	patches.suse/tools-power-x86_energy_perf_policy-Prefer-driver-HWP.patch
 	patches.suse/tools-cpupower-fix-error-return-value-in-cpupower_wr.patch
+	patches.suse/tools-cpupower-Fix-incorrect-size-in-cpuidle_state_d.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-dispatcher-Use-acpi_ds_clear_operands-in-acpi.patch
