pinctrl: keembay: release allocated memory in detach path (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12425,6 +12425,7 @@
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.suse/pinctrl-renesas-rzg2l-Fix-invalid-unsigned-return-in.patch
+	patches.suse/pinctrl-keembay-release-allocated-memory-in-detach-p.patch
 	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
 	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
