PCI: cadence: Check for the existence of cdns_pcie::ops before using it (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12904,6 +12904,7 @@
 	patches.suse/PCI-rcar-gen4-Fix-inverted-break-condition-in-PHY-in.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.suse/PCI-rcar-host-Convert-struct-rcar_msi-mask_lock-into.patch
+	patches.suse/PCI-cadence-Check-for-the-existence-of-cdns_pcie-ops.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
 	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
