--- a/series.conf
+++ b/series.conf
@@ -12675,6 +12675,7 @@
 	patches.suse/wifi-mt76-mt7996-Fix-RX-packets-configuration-for-pr.patch
 	patches.suse/wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-to-LE.patch
 	patches.suse/wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
+	patches.suse/wifi-mt76-mt76_eeprom_override-to-int.patch
 	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A7500.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
