--- a/series.conf
+++ b/series.conf
@@ -12613,6 +12613,7 @@
 	patches.suse/drm-amd-display-update-color-on-atomic-commit-time.patch
 	patches.suse/drm-amd-display-change-dc-stream-color-settings-only.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
+	patches.suse/drm-amd-display-Reject-modes-with-too-high-pixel-clo.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-amphion-Delete-v4l2_fh-synchronously-in-.relea.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
