--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -887,14 +887,7 @@ echo "Kernel debuginfo type: ${DEBUG_INFO_TYPE}"
 	--set-str CONFIG_LOCALVERSION -%source_rel-%build_flavor \
 	--enable  CONFIG_SUSE_KERNEL \
 	$CONFIG_SUSE_KERNEL_RELEASED \
-	$CONFIG_SUSE_HAVE_STABLE_KABI \
-%if 0%{?__debug_package:1}
-	--enable  CONFIG_DEBUG_INFO
-%else
-	--disable CONFIG_DEBUG_INFO \
-	--disable CONFIG_DEBUG_INFO_"${DEBUG_INFO_TYPE}" \
-	--enable  CONFIG_DEBUG_INFO_NONE
-%endif
+	$CONFIG_SUSE_HAVE_STABLE_KABI
 
 if [ %CONFIG_MODULE_SIG = "y" ]; then
 	if [ -n "%certs" ] ; then
