selftests/bpf: Check for timeout in perf_link test (bsc#1253648).

--- a/series.conf
+++ b/series.conf
@@ -49002,6 +49002,7 @@
 	patches.suse/libbpf-fix-sym_is_subprog-logic-for-weak-global-subp.patch
 	patches.suse/samples-bpf-Fix-a-resource-leak.patch
 	patches.suse/libbpf-never-interpret-subprogs-in-.text-as-entry-pr.patch
+	patches.suse/selftests-bpf-Check-for-timeout-in-perf_link-test.patch
 	patches.suse/bpf-Prevent-tailcall-infinite-loop-caused-by-freplac.patch
 	patches.suse/selftests-bpf-fix-test_spin_lock_fail.c-s-global-var.patch
 	patches.suse/bpf-arm64-Remove-garbage-frame-for-struct_ops-trampoline.patch
