s390/mm,fault: simplify kfence fault handling (bsc#1247076).

--- a/series.conf
+++ b/series.conf
@@ -17103,6 +17103,7 @@
 	patches.suse/powerpc-bpf-use-bpf_jit_binary_pack_-alloc-finalize-.patch
 	patches.suse/s390-smp-mcck-fix-early-IPI-handling.patch
 	patches.suse/s390-ap-re-init-AP-queues-on-config-on.patch
+	patches.suse/s390-mm-fault-simplify-kfence-fault-handling.patch
 	patches.suse/s390-cmma-fix-initial-kernel-address-space-page-table-walk.patch
 	patches.suse/s390-mm-add-missing-arch_set_page_dat-call-to-vmem_crst_alloc.patch
 	patches.suse/s390-mm-add-missing-arch_set_page_dat-call-to-gmap-allocations.patch
