spi: Try to get ACPI GPIO IRQ earlier (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35023,6 +35023,7 @@
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
 	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
+	patches.suse/spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
 
 	########################################################
 	# end of sorted patches
