--- a/series.conf
+++ b/series.conf
@@ -35024,6 +35024,7 @@
 	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
 	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
 	patches.suse/spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
+	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
 
 	########################################################
 	# end of sorted patches
