ASoC: cs4271: Fix regulator leak on probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35020,6 +35020,7 @@
 	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
+	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 
 	########################################################
 	# end of sorted patches
