regulator: fixed: fix GPIO descriptor leak on register failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35022,6 +35022,7 @@
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
+	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
 
 	########################################################
 	# end of sorted patches
