--- a/series.conf
+++ b/series.conf
@@ -35018,6 +35018,7 @@
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
 	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
+	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
 
 	########################################################
 	# end of sorted patches
