--- a/series.conf
+++ b/series.conf
@@ -35019,6 +35019,7 @@
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
 	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
+	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
 
 	########################################################
 	# end of sorted patches
