ASoC: codecs: va-macro: fix resource leak in probe error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35021,6 +35021,7 @@
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
+	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
 
 	########################################################
 	# end of sorted patches
