--- a/series.conf
+++ b/series.conf
@@ -35026,6 +35026,7 @@
 	patches.suse/spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
 	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
+	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 
 	########################################################
 	# end of sorted patches
