ASoC: tas2781: fix getting the wrong device number (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56295,6 +56295,7 @@
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
+	patches.suse/ASoC-tas2781-fix-getting-the-wrong-device-number.patch
 
 	########################################################
 	# end of sorted patches
